# noahroboros

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  run.sh
experiments/: results.tsv
src/: config.rs  lib.rs  main.rs
src/backtest/: mod.rs
src/market/: download.rs  mod.rs
src/scoring/: mod.rs
src/strategy/: baseline.rs  mod.rs
src/trading/: mod.rs
