[package]
name = "noahroboros"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
csv = "1"
serde = { version = "1", features = ["derive"] }
ta = "0.5"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13.2", features = ["json", "blocking"] }
serde_json = "1"
anyhow = "1"
dotenvy = "0.15"

[profile.release]
opt-level = 3
lto = "thin"
